syntax = "proto3";

option csharp_namespace = "GrpcApi";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package greet;

service ProductGrpc {
  rpc AddProduct (AddProductRequest) returns (AddProductResponse) {
    option (google.api.http) = {
      post: "/v1/product/add"
      body: "*"
    };
  };
  
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse) {
    option (google.api.http) = {
      get: "/v1/products/list"
    };
  };
  
  rpc GetProduct (GetProductRequest) returns (GetProductResponse) {
    option (google.api.http) = {
      get: "/v1/product/{id}"
    };
  };
  
  rpc UpdateProductPrice (UpdateProductPriceRequest) returns (UpdateProductPriceResponse) {
    option (google.api.http) = {
      patch: "/v1/product/updatePrice/{id}"
      body: "*"
    };
  };
}

message AddProductRequest {
  string name = 1;
  double price = 2;
  double weight = 3;
  ProductType type = 4;
  int64 warehouse_id = 5;
  google.protobuf.Timestamp creation_date = 6;
}

message ListProductsRequest {
  google.protobuf.Timestamp creation_date = 1;
  ProductType type = 2;
  int64 warehouse_id = 3;
  int32 page_number = 4;
  int32 page_size = 5;
}

message GetProductRequest {
  int64 id = 1;
}

message UpdateProductPriceRequest {
  int64 id = 1;
  double price = 2;
}

message Product {
  int64 id = 1;
  string name = 2;
  double price = 3;
  double weight = 4;
  ProductType type = 5;
  google.protobuf.Timestamp creation_date = 6;
  int64 warehouse_id = 7;
}

message AddProductResponse {
  Product product = 1;
}

message GetProductResponse {
  Product product = 1;
}

message UpdateProductPriceResponse {
  Product product = 1;
}

message ListProductsResponse {
  repeated Product products = 1;
}

enum ProductType {
  GENERAL = 0;
  HOUSEHOLD_CHEMICALS = 1;
  APPLIANCES = 2;
  GROCERIES = 3;
}
